# KeyboxScavengerBackend

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
app/: event.py
scavenger/: config.py  models.py  storage.py  userbot.py  validator.py
tests/: test_scavenger_storage.py  test_userbot.py  test_validator_certificate_validity.py  test_validator_pem_sanitizer.py  test_validator_remote_cache.py
